--- a/CVD19INFO/app/src/main/AndroidManifest.xml
+++ b/CVD19INFO/app/src/main/AndroidManifest.xml
@@ -9,19 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MypageActivity"/>
-        <activity android:name=".ui.SymptomInfoActivity"/>
-        <activity android:name=".ui.SymptomChartActivity"/>
-        <activity android:name=".ui.AfterEffectInfoActivity"/>
-        <activity android:name=".ui.AfterEffectChartActivity"/>
-        <activity android:name=".ui.EmergencyAlertsActivity"/>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MypageActivity"/>
+        <activity android:name=".ui.SymptomInfoActivity"/>
+        <activity android:name=".ui.SymptomChartActivity"/>
+        <activity android:name=".ui.AfterEffectInfoActivity"/>
+        <activity android:name=".ui.AfterEffectChartActivity"/>
+        <activity android:name=".ui.EmergencyAlertsActivity"/>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
